# smc

./: Makefile  http.c  http.h  main.c  meson.build
api/: api.c  api.h  hjson.c  hjson.h  list.c  list.h  state.bkp.c  state.c  state.h
lib/: array.c  array.h  hcurs.c  hcurs.h  hjson.c  hjson.h  htermbox.c  htermbox.h  list.c  list.h  util.c  util.h
msg/: command.c  command.h  hcurs.h  inputline.c  inputline.h  main.c  main.c.bkp  menu.c  menu.h  readmsg.c  readmsg.h  room.c  room.h  smc.h  sync.c  sync.h  ui.h
mtx/: devices.c  devices.h  encryption.c  encryption.h  mtx.c  mtx.h  room.h  signing.c  signing.h  state.c  state.h  types.h
mtx/state/: apply.c  apply.h  parse.c  parse.h  room.c  room.h
src/: api.c  api.h  parse.c  parse.h
tests/: utils.c  utils.h
tests/helloworld/: test.c
